2010-05-04  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>

	* include/SatSolver.tcc: Fix segmetation fault.

2010-05-04  Seif El-Din Bairakdar  <seif.bairakdar@gmail.com>

	* src/dmcsc.cpp: Fix output info.

	* include/ClaspResultGrammar.tcc: Fix parsing models with older
	boost.

2010-05-04  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>
	* src/BeliefCombination.cpp: remove some debug output.

	* include/OptDMCS.h: Adapt OptDMCS to returning
	statistic information.
	* src/OptDMCS.cpp: Likewise.
	* include/CommandType.h: Likewise.
	* src/dmcsc.cpp: Likewise.

	* include/BeliefState.h: Update operator<<
	* include/PrimitiveMessage.h: Likewise.
	* include/StatsInfo.h: Likewise.

	* src/PrimitiveDMCS.cpp: Fix SegFault and get transfer time.

	* include/ReturnMessage.h: Update outputting result.

	* include/StatsInfo.h: Update outputting result, update transfer
	time from neighbors.

2010-05-04  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/StatsInfo.h: Add STATS_DIFF and STATS_DIFF_REUSE macros.
	Do some code clean-ups.
	* src/PrimitiveDMCS.cpp: Likewise.
	* include/BaseDMCS.h: Likewise.
	* include/PrimitiveDMCS.h: Likewise.
	* include/CommandType.h: Likewise.

2010-05-03  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>

	* configure.ac: Add BOOST_DATE_TIME

	* src/PrimitiveDMCS.cpp: Add statistic information.
	* src/dmcsc.cpp: Likewise.

	* include/StatsInfo.h: Define operator<< and combine()

	* include/Server.tcc: Add some debug information.

	* include/Message.h: Remove sub-messages and put them to
	separated files.
	* include/OptDMCS.h: Likewise.
	* include/PrimitiveDMCS.h: Likewise.
	* include/Session.h: Likewise.
	* include/Makefile.am: Likewise.

	* include/OptMessage.h: New file.
	* include/PrimitiveMessage.h: Likewise.
	* include/ReturnMessage.h: Likewise.

	* include/CommandType.h: Realize continues().

	* include/BaseDMCS.h: Add case distinction for StatisticInformation.

2010-05-02  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>
