@@ -75,21 +75,27 @@ OptDMCS::getBeliefStates(const OptMessage& mess)
   
   for (std::size_t i = 0; i < n; ++i)
     {
-      TimeDurationPtr t_i(new TimeDuration(0, 0, 0, 0));
-      TimeDurationPtr c_i(new TimeDuration(0, 0, 0, 0));
-      TimeDurationPtr p_i(new TimeDuration(0, 0, 0, 0));
+      TimeDuration local_i(0, 0, 0, 0);
+      TimeDuration combine_i(0, 0, 0, 0);
+      TimeDuration project_i(0, 0, 0, 0);
+
+      Info info_local(local_i, 0);
+      Info info_combine(combine_i, 0);
+      Info info_project(project_i, 0);
+
       TransferTimesPtr tf_i(new TransferTimes);
-      
-      StatsInfoPtr si(new StatsInfo(t_i, c_i, p_i, tf_i));
-      
+
+      StatsInfo si(info_local, info_combine, info_project, tf_i);      
+
       sis->push_back(si);
     }
   
-  TimeDurationPtr time_combine(new TimeDuration(0, 0, 0, 0));
+  TimeDuration time_combine(0, 0, 0, 0);
 
   std::cerr << "Initialization of the statistic information: " << *sis << std::endl;
 
   TransferTimesPtr time_transfer(new TransferTimes);
+  StatsInfo& my_stats_info = (*sis)[k-1];
 #endif
 
 
@@ -152,6 +158,10 @@ OptDMCS::getBeliefStates(const OptMessage& mess)
   STATS_DIFF (local_belief_states = localSolve(globalV),
 	      time_lsolve);
 
+#ifdef DMCS_STATS_INFO
+  my_stats_info.lsolve.second = local_belief_states->size();
+#endif // DMCS_STATS_INFO
+
 #ifdef DEBUG
   BeliefStatePtr all_masked(new BeliefState(n, maxBeliefSet()));
   printBeliefStatesNicely(std::cerr, local_belief_states, all_masked, query_plan);
@@ -164,6 +174,10 @@ OptDMCS::getBeliefStates(const OptMessage& mess)
 
   STATS_DIFF (project_to(local_belief_states, globalV, temporary_belief_states),
 	      time_projection);
+
+#ifdef DMCS_STATS_INFO
+  my_stats_info.projection.second = temporary_belief_states->size();
+#endif // DMCS_STATS_INFO
 
 #if defined(DEBUG)
   std::cerr << "Projected belief states..." << std::endl;
@@ -216,12 +230,12 @@ OptDMCS::getBeliefStates(const OptMessage& mess)
 
       combine(sis, stats_infos);
       
-      PTimePtr sent_moment = client_mess->getSendingMoment();
+      PTime sent_moment = client_mess->getSendingMoment();
       PTime this_moment = boost::posix_time::microsec_clock::local_time();
-      TimeDurationPtr time_neighbor_me(new TimeDuration(0, 0, 0, 0));
-      *time_neighbor_me = this_moment - (*sent_moment);
+      TimeDuration time_neighbor_me = this_moment - sent_moment;
+      Info neighbor_transfer(time_neighbor_me, neighbor_belief_states->size());
       
-      time_transfer->insert(std::pair<std::size_t, TimeDurationPtr>(neighbor_id, time_neighbor_me));
+      time_transfer->insert(std::pair<std::size_t, Info>(neighbor_id, neighbor_transfer));
 #else
       BeliefStateListPtr neighbor_belief_states = client.getResult();
 #endif // DMCS_STATS_INFO
@@ -247,6 +261,10 @@ OptDMCS::getBeliefStates(const OptMessage& mess)
   
   //  cache->insert(V, belief_states);
 
+#ifdef DMCS_STATS_INFO
+  my_stats_info.combine.second = temporary_belief_states->size();
+#endif // DMCS_STATS_INFO
+
   BeliefStateListPtr belief_states(new BeliefStateList);
   project_to(temporary_belief_states, localV, belief_states);
 
@@ -257,22 +275,17 @@ OptDMCS::getBeliefStates(const OptMessage& mess)
 #endif // DEBUG
 
 #ifdef DMCS_STATS_INFO
-  StatsInfoPtr my_stats_info = (*sis)[k-1];
+  my_stats_info.lsolve.first     += time_lsolve;
+  my_stats_info.combine.first    += time_combine;
+  my_stats_info.projection.first += time_projection;
 
-  TimeDurationPtr  my_lsolve     = my_stats_info->lsolve;
-  TimeDurationPtr  my_combine    = my_stats_info->combine;
-  TimeDurationPtr  my_projection = my_stats_info->projection;
-  TransferTimesPtr my_transfer   = my_stats_info->transfer;
+  TransferTimesPtr my_transfer   = my_stats_info.transfer;
 
-  *my_lsolve     = (*my_lsolve)     + (*time_lsolve);
-  *my_combine    = (*my_combine)    + (*time_combine);
-  *my_projection = (*my_projection) + (*time_projection);
   *my_transfer   = *time_transfer; // copy here
 
   std::cerr << "Size of my transfer = " << my_transfer->size() << std::endl;
 
-  PTime s_moment = boost::posix_time::microsec_clock::local_time();
-  PTimePtr sending_moment(new PTime(s_moment));
+  PTime sending_moment = boost::posix_time::microsec_clock::local_time();
 
   ReturnMessagePtr returning_message(new ReturnMessage(belief_states, sending_moment, sis));
 
